# gemini_caption

./: .gitignore  LICENSE  MANIFEST.in  README.md  collection_last_created.csv  pyproject.toml  requirements.txt  setup.py
src/: danbooru_pics_normal.py
src/gemini_caption/: __init__.py  caption_promt_utils.py  character_analyzer.py  config.py  danbooru_pics.py  danbooru_tags.py  danbooru_url_checker.py  file_utils.py  gemini_batch_caption.py  gemini_single_caption.py
src/gemini_caption/mongo_collections/: __init__.py  danbooru_gemini_captions.py  danbooru_pics.py  danbooru_pics_model.py  danbooru_tags.py
src/gemini_caption/utils/: batch_processor.py  caption_promt_utils.py  character_analyzer.py  file_utils.py  gemini_api_client.py  image_processor.py  logger_utils.py
src/input_db/250318_wentao_character_stats/: input_character_stats.py
src/input_db/250318_zjj_create_relationship/: create_relationship.py
src/input_db/250319_zjj_danbooru_posts/: mongo_migrate.py
src/input_db/250319_zjj_update_parent/: parent.py
src/input_db/250322_remove_error_data/: remove.py
src/scrapy/250318_zjj_dan_tags/: danbooru_character_tags.py  scrapy.py  scrapy_relate.py
src/scrapy/250319_zjj_posts/: mongo_migrate.py  mongo_migrate_sync.py  scrapy.py
